--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
+    "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
+    "react-drag-listview": "^0.1.7",
+    "react-drag-sortable": "^1.0.6",
     "react-scripts": "3.4.3"
   },
   "scripts": {
